src/objects/HWS_Service_Quote_OPT_Status_Mapping__mdt.object
<CustomObject>
    <description>HWSDDP-102</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>HWSDDP-102</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Quote_Eligible__c</fullName>
        <label>Is Quote Eligible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Suspension_Eligible__c</fullName>
        <label>Is Suspension Eligible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>HWSDDP-102</description>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HWS Service Quote OPT Status Mapping</label>
    <pluralLabel>HWS Service Quote OPT Status Mapping</pluralLabel>
</CustomObject>